# OmegaOptimizer

./: .gitignore  Cargo.toml  Makefile  README.md  run.py  test.py
.github/workflows/: tests.yml
data/: create_data.py
make/: make.py  run.py  test.py
media/: icon.raw
plotting/: animation_plotter.py  path_plotter.py  plotter.py
preprocessor/: find_initial_params.py  process_data.py
src/: descent_funcs.rs  error_funcs.rs  error_functions.rs  main.rs  minimizers.rs  parameter_gui.rs  parameter_gui_old.rs  statistics.rs  utils.rs
src/functions/: decay.rs  line.rs  mod.rs  mort_func.rs  normal.rs  sine.rs  sqrt.rs
src/plotting/: plotter.py  plotter.rs
