[package]
name = "omega_optimizer"
version = "0.1.0"
authors = ["Emilie <emilid2103@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
ndarray-stats = "0.5"
data_reader = "0.5.0"
itertools = "0.12.1"
regex = "1.5"
rand = "0.8.4"
