[package]
name = "omega_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.0"
itertools = "0.13.0"
clap = { version = "4.5.9", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26.4"
egui = "0.28.1"
egui_plot = "0.28.1"
eframe = "0.28.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
