[package]
name = "omega_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
itertools = "0.14.0"
clap = { version = "4.5.9", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
egui_plot = "0.34.0"
eframe = "0.33.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"

[dev-dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
